Fix invalid JVM options in Maven jvm.config