@@ -1,4 +1,3 @@
 -Djansi.passthrough=true
 -Dmaven.ansi.disable=true
---add-opens java.base/jdk.internal.misc=ALL-UNNAMED
---add-opens java.base/sun.misc=ALL-UNNAMED
+
